Optimize PathGraph with spatial lookup & optimize block update check
Improves performance of block update checks by returning earlier in most cases and adds a spatial chunk-to-network index for faster map updates.